--- a/roster.html
+++ b/roster.html
@@ -162,7 +162,6 @@
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
-<tr><td>IND</td><td>Eric Ebron             </td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
@@ -172,6 +171,7 @@
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
+<tr><td>MIA</td><td>Patrick Laird          </td></tr>
 </table>
 </td>
 </tr>
