--- a/week14.html
+++ b/week14.html
@@ -11,8 +11,8 @@
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Boyd</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Snell</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -41,9 +41,9 @@
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Lock</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
