--- a/week14.html
+++ b/week14.html
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>White</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Jeffery</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
