--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
-<a href="week14.html"><b>14P</b></a><br>
+<a href="week14.html"><b>14</b></a>
+<a href="week15.html"><b>15P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -71,43 +72,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8210</font></td>
-    <td><font size=2>8535</font></td>
-    <td><font size=2>900</font></td>
-    <td><font size=2>310</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8150</font></td>
-    <td><font size=2>8785</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>260</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9055</font></td>
-    <td><font size=2>8260</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9880</font></td>
+    <td><font size=2>9015</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>3</font></td></tr>
+<tr><td><font size=2>Rich(9)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8510</font></td>
+    <td><font size=2>9405</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>300</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8485</font></td>
+    <td><font size=2>9595</font></td>
+    <td><font size=2>1065</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7590</font></td>
-    <td><font size=2>8450</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>8345</font></td>
+    <td><font size=2>9275</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>7060</font></td>
-    <td><font size=2>8545</font></td>
+    <td><font size=2>10</font></td>
+    <td><font size=2>7540</font></td>
+    <td><font size=2>9165</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
@@ -120,42 +121,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10440</font></td>
-    <td><font size=2>7945</font></td>
+    <td><font size=2>11060</font></td>
+    <td><font size=2>8425</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
     <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7885</font></td>
-    <td><font size=2>7685</font></td>
-    <td><font size=2>855</font></td>
-    <td><font size=2>295</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6905</font></td>
-    <td><font size=2>7015</font></td>
+    <td><font size=2>8755</font></td>
+    <td><font size=2>7985</font></td>
     <td><font size=2>870</font></td>
-    <td><font size=2>305</font></td>
+    <td><font size=2>295</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8025</font></td>
-    <td><font size=2>8095</font></td>
+    <td><font size=2>8835</font></td>
+    <td><font size=2>8430</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>245</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Sam(8)</font></td>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>6</font></td>
+    <td><font size=2>7305</font></td>
+    <td><font size=2>7770</font></td>
+    <td><font size=2>870</font></td>
+    <td><font size=2>305</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>8090</font></td>
-    <td><font size=2>8095</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8845</font></td>
+    <td><font size=2>8495</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>390</font></td>
     <td><font size=2>1</font></td></tr>
