--- a/roster.html
+++ b/roster.html
@@ -68,7 +68,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Damien Williams        </td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
-<tr><td>WAS</td><td>Derrius Guice          </td></tr>
+<tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
