--- a/pickups.html
+++ b/pickups.html
@@ -347,7 +347,8 @@ Team 8  - Brian Hill/Ito Smith (11/12)<br>
 Team 4  - Nick Foles/Preston Williams (11/15)<br>
 Team 10 - Brett Maher/Drew Lock (11/17)<br>
 Team 6  - Dallas Goedert/Delanie Walker (11/27)<br>
-Team 6  - Patrick Laird/Eric Ebron (12/4)
+Team 6  - Patrick Laird/Eric Ebron (12/4)<br>
+Team 3  - Raheem Mostert/Derrius Guice (12/10)
 </td></tr>
 <tr><td width=50>11/16</td>
 <td width=600>
