--- a/roster.html
+++ b/roster.html
@@ -190,8 +190,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
-<tr><td>PHI</td><td>Alshon Jeffery         </td></tr>
 <tr><td>NYG</td><td>Sterling Shepard       </td></tr>
+<tr><td>IND</td><td>Zach Pascal            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -283,7 +283,7 @@
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
-<tr><td>DAL</td><td>Brett Maher            </td></tr>
+<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
