--- a/pickups.html
+++ b/pickups.html
@@ -348,7 +348,9 @@ Team 4  - Nick Foles/Preston Williams (11/15)<br>
 Team 10 - Brett Maher/Drew Lock (11/17)<br>
 Team 6  - Dallas Goedert/Delanie Walker (11/27)<br>
 Team 6  - Patrick Laird/Eric Ebron (12/4)<br>
-Team 3  - Raheem Mostert/Derrius Guice (12/10)
+Team 3  - Raheem Mostert/Derrius Guice (12/10)<br>
+Team 7  - Zach Pascal/Alshon Jeffery (12/12)<br>
+Team 10 - Brandon McManus/Brett Maher (12/15)
 </td></tr>
 <tr><td width=50>11/16</td>
 <td width=600>
