--- a/week15.html
+++ b/week15.html
@@ -40,9 +40,9 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Lock</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -115,7 +115,7 @@
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -141,12 +141,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Hardman</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
