--- a/thousand.html
+++ b/thousand.html
@@ -591,6 +591,12 @@
     <td>1065</td>
     <td>Grant</td>
     <td>705</td></tr>
+<tr><td>2019</td>
+    <td>Week 15</td>
+    <td>Sam Edwards</td>
+    <td>1065</td>
+    <td>Rich</td>
+    <td>575</td></tr>
 <tr><td>2002</td>
     <td>Week 7</td>
     <td>Roger Bakos</td>
