--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <a href="week12.html"><b>12</b></a>
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
-<a href="week15.html"><b>15P</b></a><br>
+<a href="week15.html"><b>15</b></a>
+<a href="week16.html"><b>16P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -73,42 +74,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>9880</font></td>
-    <td><font size=2>9015</font></td>
+    <td><font size=2>10495</font></td>
+    <td><font size=2>9455</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8510</font></td>
-    <td><font size=2>9405</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>9085</font></td>
+    <td><font size=2>10470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8485</font></td>
-    <td><font size=2>9595</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>8925</font></td>
+    <td><font size=2>10210</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8345</font></td>
-    <td><font size=2>9275</font></td>
+    <td><font size=2>8815</font></td>
+    <td><font size=2>9700</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>10</font></td>
-    <td><font size=2>7540</font></td>
-    <td><font size=2>9165</font></td>
+    <td><font size=2>11</font></td>
+    <td><font size=2>7965</font></td>
+    <td><font size=2>9635</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
@@ -120,45 +121,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>11060</font></td>
-    <td><font size=2>8425</font></td>
-    <td><font size=2>1195</font></td>
-    <td><font size=2>365</font></td>
-    <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>9</font></td>
+    <td><font size=2>10</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8755</font></td>
-    <td><font size=2>7985</font></td>
+    <td><font size=2>9520</font></td>
+    <td><font size=2>8595</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>8</font></td>
+<tr><td><font size=2>Randy(4)</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8835</font></td>
-    <td><font size=2>8430</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>245</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>11670</font></td>
+    <td><font size=2>9190</font></td>
+    <td><font size=2>1195</font></td>
+    <td><font size=2>365</font></td>
+    <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>7305</font></td>
-    <td><font size=2>7770</font></td>
+    <td><font size=2>8075</font></td>
+    <td><font size=2>8380</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8845</font></td>
-    <td><font size=2>8495</font></td>
+    <td><font size=2>9910</font></td>
+    <td><font size=2>9070</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>390</font></td>
+    <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9445</font></td>
+    <td><font size=2>9200</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>245</font></td>
     <td><font size=2>1</font></td></tr>
 </table>
 </table>
