--- a/roster.html
+++ b/roster.html
@@ -71,11 +71,11 @@
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
-<tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
 <tr><td> SF</td><td>Dante Pettis           </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
 <tr><td>OAK</td><td>Tyrell Williams        </td></tr>
+<tr><td> TB</td><td>Breshad Perriman       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Zach Ertz              </td></tr>
 <tr><td>HOU</td><td>Darren Fells           </td></tr>
@@ -102,12 +102,12 @@
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td>ARI</td><td>Kenyan Drake           </td></tr>
 <tr><td>CAR</td><td>Reggie Bonnafon        </td></tr>
+<tr><td>MIN</td><td>Mike Boone             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>HOU</td><td>Will Fuller            </td></tr>
-<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
