--- a/week16.html
+++ b/week16.html
@@ -7,11 +7,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Brees</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Perriman</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gallup</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
@@ -110,13 +110,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>White</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pascal</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hodges</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
