--- a/roster.html
+++ b/roster.html
@@ -94,8 +94,8 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Randy (4)</b></font></td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
-<tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td>JAX</td><td>Nick Foles             </td></tr>
+<tr><td>MIA</td><td>Ryan Fitzpatrick       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
