--- a/week16.html
+++ b/week16.html
@@ -21,9 +21,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Cousins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Fitzpatrick</td>   <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Boone</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -40,9 +40,9 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lock</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -53,7 +53,7 @@
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
@@ -80,11 +80,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
@@ -132,7 +132,7 @@
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
