--- a/week16.html
+++ b/week16.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
 <tr><td>Fitzpatrick</td>   <td></td><td align=right>0</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Boone</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -127,7 +127,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
