--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <a href="week13.html"><b>13</b></a>
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
-<a href="week16.html"><b>16P</b></a><br>
+<a href="week16.html"><b>16</b></a>
+<a href="week17.html"><b>17P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -76,7 +77,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10495</font></td>
+    <td><font size=2>11200</font></td>
     <td><font size=2>9455</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
@@ -84,7 +85,7 @@
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9085</font></td>
+    <td><font size=2>9500</font></td>
     <td><font size=2>10470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>300</font></td>
@@ -92,15 +93,15 @@
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>8925</font></td>
+    <td><font size=2>9100</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>1065</font></td>
-    <td><font size=2>260</font></td>
+    <td><font size=2>175</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>8815</font></td>
+    <td><font size=2>9300</font></td>
     <td><font size=2>9700</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
@@ -108,7 +109,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>7965</font></td>
+    <td><font size=2>8875</font></td>
     <td><font size=2>9635</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
@@ -124,31 +125,31 @@
 <tr><td><font size=2>Matthew(2)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9520</font></td>
+    <td><font size=2>10395</font></td>
     <td><font size=2>8595</font></td>
-    <td><font size=2>870</font></td>
+    <td><font size=2>875</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>11670</font></td>
+    <td><font size=2>12785</font></td>
     <td><font size=2>9190</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
-    <td><font size=2>4</font></td></tr>
+    <td><font size=2>5</font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8075</font></td>
+    <td><font size=2>8375</font></td>
     <td><font size=2>8380</font></td>
     <td><font size=2>870</font></td>
-    <td><font size=2>305</font></td>
+    <td><font size=2>300</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9910</font></td>
+    <td><font size=2>10805</font></td>
     <td><font size=2>9070</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>390</font></td>
@@ -156,7 +157,7 @@
 <tr><td><font size=2>Mike(10)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9445</font></td>
+    <td><font size=2>9710</font></td>
     <td><font size=2>9200</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>245</font></td>
