--- a/thousand.html
+++ b/thousand.html
@@ -417,6 +417,12 @@
     <td>1115</td>
     <td>Grant</td>
     <td>455</td></tr>
+<tr><td>2019</td>
+    <td>Week 16</td>
+    <td>Randy Edwards</td>
+    <td>1115</td>
+    <td>States</td>
+    <td>705</td></tr>
 <tr><td>2002</td>
     <td>Week 10</td>
     <td>Brian Crooch</td>
