--- a/pickups.html
+++ b/pickups.html
@@ -59,8 +59,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Tyler Higbee/Jimmy Graham</td>
+<td width=50>12/29</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -118,8 +118,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>David Blough/Dante Pettis</td>
+<td width=50>12/28</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -352,7 +352,8 @@ Team 3  - Raheem Mostert/Derrius Guice (12/10)<br>
 Team 7  - Zach Pascal/Alshon Jeffery (12/12)<br>
 Team 10 - Brandon McManus/Brett Maher (12/15)<br>
 Team 4  - Mike/Boone/Marvin Jones (12/17)<br>
-Team 3  - Breshad Perriman/Calvin Ridley (12/18)
+Team 3  - Breshad Perriman/Calvin Ridley (12/18)<br>
+Team 5  - Jamison Crowder/Darrel Williams (12/29)
 </td></tr>
 <tr><td width=50>11/16</td>
 <td width=600>
