--- a/roster.html
+++ b/roster.html
@@ -48,7 +48,7 @@
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> GB</td><td>Jimmy Graham           </td></tr>
+<tr><td>LAR</td><td>Tyler Higbee           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -72,7 +72,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Stefon Diggs           </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
-<tr><td> SF</td><td>Dante Pettis           </td></tr>
 <tr><td>ARI</td><td>Larry Fitzgerald       </td></tr>
 <tr><td>OAK</td><td>Tyrell Williams        </td></tr>
 <tr><td> TB</td><td>Breshad Perriman       </td></tr>
@@ -86,6 +85,7 @@
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td>DET</td><td>Ty Johnson             </td></tr>
 <tr><td>CIN</td><td>Ryan Finley            </td></tr>
+<tr><td>DET</td><td>David Blough           </td></tr>
 </table>
 </td>
 </tr>
@@ -130,12 +130,12 @@
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td>HOU</td><td>Carlos Hyde            </td></tr>
-<tr><td> KC</td><td>Darrel Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td>JAX</td><td>DJ Chark               </td></tr>
+<tr><td>NYJ</td><td>Jamison Crowder        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>OAK</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
