--- a/week17.html
+++ b/week17.html
@@ -7,12 +7,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lock</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -21,9 +21,9 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Fitzpatrick</td>   <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Cousins (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
@@ -36,28 +36,28 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Garoppolo</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sanu</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Boykin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Snell</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Perriman</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Diggs (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Fells (D)</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Blough</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -66,11 +66,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LMurray</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Crowder</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
@@ -96,9 +96,9 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
 <tr><td>White</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Thielen (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
@@ -110,7 +110,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>LBell</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
@@ -127,10 +127,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Singletary (D)</td><td></td><td align=right>0</td></tr>
 <tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JBrown (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hardman</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
