--- a/pickups.html
+++ b/pickups.html
@@ -353,7 +353,8 @@ Team 7  - Zach Pascal/Alshon Jeffery (12/12)<br>
 Team 10 - Brandon McManus/Brett Maher (12/15)<br>
 Team 4  - Mike/Boone/Marvin Jones (12/17)<br>
 Team 3  - Breshad Perriman/Calvin Ridley (12/18)<br>
-Team 5  - Jamison Crowder/Darrel Williams (12/29)
+Team 5  - Jamison Crowder/Darrel Williams (12/29)<br>
+Team 8  - Antonio Brown/Rashaad Penny (12/29)
 </td></tr>
 <tr><td width=50>11/16</td>
 <td width=600>
