--- a/roster.html
+++ b/roster.html
@@ -213,7 +213,6 @@
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
 <tr><td>ATL</td><td>Devonta Freeman        </td></tr>
 <tr><td>BAL</td><td>Mark Ingram            </td></tr>
-<tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td> SF</td><td>Matt Breida            </td></tr>
 <tr><td>ATL</td><td>Brian Hill             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -221,6 +220,7 @@
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
 <tr><td>ARI</td><td>Christian Kirk         </td></tr>
+<tr><td> NE</td><td>Antonio Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>LAC</td><td>Hunter Henry           </td></tr>
