--- a/week17.html
+++ b/week17.html
@@ -112,7 +112,7 @@
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>LBell</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
