--- a/week17.html
+++ b/week17.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>155</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>245</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>30</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lock</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>185</td></tr>
+<tr><td>Higbee</td>        <td></td><td align=right>90</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Lock</td>          <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>795</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Cousins (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cousins (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Drake</td>         <td></td><td align=right>80</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>85</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>120</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>115</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>30</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>10</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>50</td></tr>
 <tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Sanu</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Snell</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hauschka</td>      <td></td><td align=right>40</td></tr>
+<tr><td>Snell</td>         <td></td><td align=right>95</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>LJackson (D)</td>  <td></td><td align=right>0</td></tr>
+<tr><td>LJackson (D)</td>  <td></td><td align=right>***</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Perriman</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Diggs (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Fells (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blough</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>360</td></tr>
+<tr><td>Perriman</td>      <td></td><td align=right>165</td></tr>
+<tr><td>Diggs (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Fells (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>165</td></tr>
+<tr><td>Blough</td>        <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
-<tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>LMurray</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Goff</td>          <td></td><td align=right>175</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>285</td></tr>
+<tr><td>LMurray</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Crowder</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crowder</td>       <td></td><td align=right>80</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Fairbairn</td>     <td></td><td align=right>10</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>805</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>205</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>30</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>45</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>115</td></tr>
+<tr><td></td>              <td></td><td align=right>425</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>130</td></tr>
 <tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
-<tr><td>White</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>White</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Thielen (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Slayton</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>100</td></tr>
 <tr><td>Hodges</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
-<tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
-<tr><td>LBell</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Winston</td>       <td></td><td align=right>135</td></tr>
+<tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
+<tr><td>DFreeman</td>      <td></td><td align=right>25</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>145</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>75</td></tr>
+<tr><td>Lambo</td>         <td></td><td align=right>165</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>300</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary (D)</td><td></td><td align=right>0</td></tr>
-<tr><td>Parker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JBrown (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hardman</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Singletary (D)</td><td></td><td align=right>***</td></tr>
+<tr><td>Parker</td>        <td></td><td align=right>65</td></tr>
+<tr><td>JBrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>100</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>15</td></tr>
+<tr><td>Hardman</td>       <td></td><td align=right>200</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>405</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>45</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>35</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>155</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>665</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11200</font></td>
+    <td><font size=2>11965</font></td>
     <td><font size=2>9455</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9500</font></td>
+    <td><font size=2>10180</font></td>
     <td><font size=2>10470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>300</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9100</font></td>
+    <td><font size=2>9470</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>175</font></td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9300</font></td>
+    <td><font size=2>10105</font></td>
     <td><font size=2>9700</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8875</font></td>
+    <td><font size=2>9135</font></td>
     <td><font size=2>9635</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Matthew(2)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10395</font></td>
+    <td><font size=2>11190</font></td>
     <td><font size=2>8595</font></td>
     <td><font size=2>875</font></td>
     <td><font size=2>295</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Randy(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>12785</font></td>
+    <td><font size=2>13225</font></td>
     <td><font size=2>9190</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8375</font></td>
+    <td><font size=2>8800</font></td>
     <td><font size=2>8380</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>300</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10805</font></td>
+    <td><font size=2>11475</font></td>
     <td><font size=2>9070</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>390</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Mike(10)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9710</font></td>
+    <td><font size=2>10375</font></td>
     <td><font size=2>9200</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>245</font></td>
