--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -77,7 +77,7 @@
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11200</font></td>
+    <td><font size=2>11965</font></td>
     <td><font size=2>9455</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
@@ -85,7 +85,7 @@
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9500</font></td>
+    <td><font size=2>10180</font></td>
     <td><font size=2>10470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>300</font></td>
@@ -93,7 +93,7 @@
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9100</font></td>
+    <td><font size=2>9470</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>175</font></td>
@@ -101,7 +101,7 @@
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9300</font></td>
+    <td><font size=2>10105</font></td>
     <td><font size=2>9700</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
@@ -109,7 +109,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8875</font></td>
+    <td><font size=2>9135</font></td>
     <td><font size=2>9635</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
@@ -125,7 +125,7 @@
 <tr><td><font size=2>Matthew(2)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10395</font></td>
+    <td><font size=2>11190</font></td>
     <td><font size=2>8595</font></td>
     <td><font size=2>875</font></td>
     <td><font size=2>295</font></td>
@@ -133,7 +133,7 @@
 <tr><td><font size=2>Randy(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>12785</font></td>
+    <td><font size=2>13225</font></td>
     <td><font size=2>9190</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
@@ -141,7 +141,7 @@
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8375</font></td>
+    <td><font size=2>8800</font></td>
     <td><font size=2>8380</font></td>
     <td><font size=2>870</font></td>
     <td><font size=2>300</font></td>
@@ -149,7 +149,7 @@
 <tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10805</font></td>
+    <td><font size=2>11475</font></td>
     <td><font size=2>9070</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>390</font></td>
@@ -157,7 +157,7 @@
 <tr><td><font size=2>Mike(10)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9710</font></td>
+    <td><font size=2>10375</font></td>
     <td><font size=2>9200</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>245</font></td>
