--- a/roster.html
+++ b/roster.html
@@ -221,6 +221,7 @@
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
 <tr><td>ARI</td><td>Christian Kirk         </td></tr>
 <tr><td> NE</td><td>Antonio Brown          </td></tr>
+<tr><td>BAL</td><td>De'Anthony Thomas      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>LAC</td><td>Hunter Henry           </td></tr>
@@ -228,7 +229,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Josh Lambo             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>Austin Seibert         </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
 </table>
 </td>
