--- a/week17.html
+++ b/week17.html
@@ -112,7 +112,7 @@
 <tr><td>Winston</td>       <td></td><td align=right>135</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>DFreeman</td>      <td></td><td align=right>25</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DThomas (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>145</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>165</td></tr>
