--- a/freeagt.html
+++ b/freeagt.html
@@ -100,6 +100,7 @@
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3>1005</td></tr>
 <tr><td><font size=3>Diontae Johnson        </td><td><font size=3> 955</td></tr>
 <tr><td><font size=3>Steven Sims            </td><td><font size=3> 775</td></tr>
 <tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 570</td></tr>
@@ -114,6 +115,5 @@
 <tr><td><font size=3>Scott Miller           </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>Hale Hentges           </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Parris Campbell        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Wes Hills              </td><td><font size=3> 100</td></tr>
 </table>
 </td></tr></table>
