--- a/week17.html
+++ b/week17.html
@@ -21,7 +21,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (4)</b></font></td></tr>
-<tr><td>Cousins (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Cousins (D)</td>   <td></td><td align=right>60</td></tr>
 <tr><td>Drake</td>         <td></td><td align=right>80</td></tr>
 <tr><td>McCaffrey</td>     <td></td><td align=right>85</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>120</td></tr>
@@ -29,7 +29,7 @@
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lutz</td>          <td></td><td align=right>30</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>10</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -37,14 +37,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>75</td></tr>
-<tr><td>Kamara (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kamara (D)</td>    <td></td><td align=right>50</td></tr>
 <tr><td>AJones</td>        <td></td><td align=right>50</td></tr>
 <tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Sanu</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hauschka</td>      <td></td><td align=right>40</td></tr>
 <tr><td>Snell</td>         <td></td><td align=right>95</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>310</td></tr>
 </table>
 </td>
 <td>
@@ -54,8 +54,8 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>360</td></tr>
 <tr><td>Perriman</td>      <td></td><td align=right>165</td></tr>
-<tr><td>Diggs (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td>Fells (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Diggs (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Fells (D)</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>165</td></tr>
 <tr><td>Blough</td>        <td></td><td align=right>75</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
@@ -98,12 +98,12 @@
 <tr><td>Wilson</td>        <td></td><td align=right>130</td></tr>
 <tr><td>Samuels</td>       <td></td><td align=right>0</td></tr>
 <tr><td>White</td>         <td></td><td align=right>75</td></tr>
-<tr><td>Thielen (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Thielen (D)</td>   <td></td><td align=right>60</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>40</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>100</td></tr>
 <tr><td>Hodges</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>430</td></tr>
 </table>
 </td>
 <td>
@@ -127,13 +127,13 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>300</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary (D)</td><td></td><td align=right>***</td></tr>
+<tr><td>Singletary (D)</td><td></td><td align=right>25</td></tr>
 <tr><td>Parker</td>        <td></td><td align=right>65</td></tr>
-<tr><td>JBrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>JBrown (D)</td>    <td></td><td align=right>75</td></tr>
 <tr><td>Cook</td>          <td></td><td align=right>100</td></tr>
 <tr><td>Myers</td>         <td></td><td align=right>15</td></tr>
 <tr><td>Hardman</td>       <td></td><td align=right>200</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>780</td></tr>
 </table>
 </td>
 <td>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10180</font></td>
+    <td><font size=2>10280</font></td>
     <td><font size=2>10470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>300</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>9470</font></td>
+    <td><font size=2>9530</font></td>
     <td><font size=2>10210</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>175</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9135</font></td>
+    <td><font size=2>9185</font></td>
     <td><font size=2>9635</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>Randy(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>13225</font></td>
+    <td><font size=2>13285</font></td>
     <td><font size=2>9190</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
